2006-11-16  Per Bothner  <per@bothner.com>

	* XMLFilter.java: Slightly more complicated rules to check for when to
	stringize, when to ignore, and when to add space.
	(ignoringLevel): New field.  Check it when we should ignore all output.
	(stringizingElementLevel): Replace by stringizingElementNesting.
	Slighty different value.

	* XMLFilter.java (writePosition): Write word spaces if stringizing.

	* XMLFilter.java: Allocates qname and type fields in MappingInfo
	lazily, as needed.  As a side effect, this fixes a crash.

2006-11-15  Per Bothner  <per@bothner.com>

	* XMLFilter.java: (Re)implement normalization of xml:id attributes.
	(endAttribute): Do the normalization here.
	(endAttribute): Fix error in call to stringValue.
	(attrLocalName, attrPrefix): New fields.
	(inAttribute): Remove fields - used attrLocalName!=null instead.

	* XMLPrinter.java (write): Attribute character < ' ' must be escaped.

	* XMLFilter.java (beginGroupCommon, endGroup): When stringizing
	element, may need to add space before/after.

	* XMLFilter.java (beginAttributeCommon): Move endAttribute call to
	emitBeginAttribute, since we may have nested stringized attributes
	when called from XQuery element/attribute constructors.

	* XMLFilter.java (beginAttribute): Add (restore) some error checks.
	(beginDocument): Make sure "start tag" is null so above
	test for in a document is reliable.
	(closeStartTag, endGroup, endDocument): Clear popped workStack
	elements to possibly improve GC.

2006-11-14  Per Bothner  <per@bothner.com>

	* XMLFilter.java (checkValidComment): New method.
	(writeComment): Rename to commentFromParser.
	(writeComment): Also do checkValidComment.
	(emitProcessingInstruction): Rename to processingInstructionFromParser.
	(processingInstructionCommon): New method.
	(writeProcessingInstruction): Add error checks.
	* XMLParser.java.in: Update method calls.

	* XMLFilter.java: Merge in "filtering" functionality from NodeTree.
	Primarily namespace-copying and error checking.